--- a/index.html
+++ b/index.html
@@ -643,11 +643,11 @@ function animateBullet(bullet,num_lien,index) {
     }
     else if (num_lien === index+1)
     {
-    setInterval(function() {bullet.show();bullet.animate([{ property: "locationX", from: 0.0, to: 0.5 }], duration/2); bullet.hide();},duration);
+    setInterval(function() {bullet.animate([{ property: "locationX", from: 0.0, to: 0.5 }], duration/2);},duration);
     }
     else
     {
-    setInterval(function() {setTimeout(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1.0 }], duration/2);},duration/2);},duration);
+    setInterval(function() {setTimeout(function() {bullet.animate([{ property: "locationX", from: 0.5, to: 1.0 }], duration/2);bullet.locationX = 0.5;},duration/2);},duration);
     }
     /*animation_2.events.on("animationended", function(event) {animateBullet(event.target.object,num_lien,index);}) */
 }
