--- a/index.html
+++ b/index.html
@@ -603,6 +603,13 @@ chart.data = donnees_graphiques[index];
 chart.nodes.template.label.fontSize = 9;
 chart.nodes.template.label.fontWeight = 600;
 
+chart.nodes.renderer.labels.template.adapter.add("color", function(target) {
+  if (target.dataItem.index == index) {
+    return "red";
+  }
+  return "black";
+});
+
 chart.dataFields.fromName = "from";
 chart.dataFields.toName = "to";
 chart.dataFields.value = "value";
