--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ chart.data = donnees_graphiques[index];
 chart.nodes.template.label.fontSize = 9;
 chart.nodes.template.label.fontWeight = 600;
 
-chart.nodes.renderer.labels.template.adapter.add("color", function(target) {
+chart.nodes.renderer.label.template.adapter.add("color", function(target) {
   if (target.dataItem.index == index) {
     return "red";
   }
