--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ chart.data = donnees_graphiques[index];
 chart.nodes.template.label.fontSize = 9;
 chart.nodes.template.label.fontWeight = 600;
 
-chart.nodes.template.label.adapter.add("label", function(target,color) {
+chart.nodes.label.adapter.add("fill", function(target) {
   if (target.dataItem.index == index) {
     return "red";
   }
