--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ chart.nodes.template.label.fontSize = 9;
 chart.nodes.template.label.fontWeight = 600;
 
 chart.nodes.template.label.adapter.add("fill", function(target) {
-  if (target.dataItem.index == index) {
+  if (target.index == index) {
     return "red";
   }
   return "black";
