--- a/index.html
+++ b/index.html
@@ -604,7 +604,8 @@ chart.nodes.template.label.fontSize = 9;
 chart.nodes.template.label.fontWeight = 600;
 
 chart.nodes.template.label.adapter.add("fill", function(target) {
-  if (target.dataItem.from == type_act[index]) {
+  if (target.index == index) {
+    console.log('oui');
     return "red";
   }
   return "black";
