--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@ chart.nodes.template.label.fontSize = 9;
 chart.nodes.template.label.fontWeight = 600;
 
 chart.nodes.template.label.adapter.add("fill", function(target) {
-  console.log(target);
+  console.log(target.dataItem);
   if (target.text == type_act[index]) {
     console.log('oui');
     return "red";
