--- a/index.html
+++ b/index.html
@@ -604,9 +604,7 @@ chart.nodes.template.label.fontSize = 9;
 chart.nodes.template.label.fontWeight = 600;
 
 chart.nodes.template.label.adapter.add("fill", function(target,label) {
-  console.log(label.dataItem);
-  if (target.text == type_act[index]) {
-    console.log('oui');
+  if (label.dataItem.index == index) {
     return "red";
   }
   return "black";
