--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@ container_5.width = am4core.percent(100);
 container_5.height = am4core.percent(100);
 container_5.layout = "horizontal";
 
+var container_6 = am4core.create("chartdiv_6", am4core.Container);
+container_6.width = am4core.percent(100);
+container_6.height = am4core.percent(100);
+container_6.layout = "horizontal";
+
 </script>	
 	
 <ul>
@@ -216,6 +221,7 @@ container_5.layout = "horizontal";
 <li>pour chaque activité, pourcentage de participation aux autres activités (survoler les secteurs pour visualiser les pourcentages de participation)</li>
 </ul>
 
+<div id="chartdiv_6" style="height:250px"></div>
 <div id="chartdiv_3" style="height:250px"></div>
 <div id="chartdiv_4" style="height:250px"></div>
 <div id="chartdiv_5" style="height:250px"></div>
@@ -570,6 +576,41 @@ for (let i=0 ; i < type_act.length ; i++)
 	}
 	donnees_graphiques.push(donnees_graphique);
 	}
+
+// génération du graphique de totaux
+	
+am4core.ready(function() {
+
+// Themes begin
+am4core.useTheme(am4themes_animated);
+// Themes end
+var chart = container_6.createChild(am4charts.XYChart);
+chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
+
+chart.data = [
+
+];
+
+var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
+categoryAxis.renderer.grid.template.location = 0;
+categoryAxis.dataFields.category = "country";
+categoryAxis.renderer.minGridDistance = 40;
+categoryAxis.fontSize = 11;
+
+
+var series = chart.series.push(new am4charts.ColumnSeries());
+series.dataFields.categoryX = "country";
+series.dataFields.valueY = "visits";
+series.columns.template.tooltipText = "{valueY.value}";
+series.columns.template.tooltipY = 0;
+series.columns.template.strokeOpacity = 0;
+
+// as by default columns of the same series are of the same color, we add adapter which takes colors from chart.colors color set
+series.columns.template.adapter.add("fill", function(fill, target) {
+  return chart.colors.getIndex(target.dataItem.index);
+});
+
+});
 
 type_act.forEach(function(element,index)
 {
