--- a/index.html
+++ b/index.html
@@ -587,9 +587,7 @@ am4core.useTheme(am4themes_animated);
 var chart = container_6.createChild(am4charts.XYChart);
 chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
 
-chart.data = [
-
-];
+chart.data = donnees_total ;
 
 var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.renderer.grid.template.location = 0;
@@ -599,8 +597,8 @@ categoryAxis.fontSize = 11;
 
 
 var series = chart.series.push(new am4charts.ColumnSeries());
-series.dataFields.categoryX = "country";
-series.dataFields.valueY = "visits";
+series.dataFields.categoryX = "activite";
+series.dataFields.valueY = "value";
 series.columns.template.tooltipText = "{valueY.value}";
 series.columns.template.tooltipY = 0;
 series.columns.template.strokeOpacity = 0;
