--- a/index.html
+++ b/index.html
@@ -553,6 +553,7 @@ for (let i=0 ; i < type_act.length ; i++)
 	var obj = {activite : type_act[i], value : part_totale[i] };
 	donnees_total.push(obj);
 	}
+console.log(donnees_total);
 
 var donnees_graphiques = [];
 
