--- a/index.html
+++ b/index.html
@@ -553,7 +553,6 @@ for (let i=0 ; i < type_act.length ; i++)
 	var obj = {activite : type_act[i], value : part_totale[i] };
 	donnees_total.push(obj);
 	}
-console.log(donnees_total);
 
 var donnees_graphiques = [];
 
@@ -579,7 +578,7 @@ for (let i=0 ; i < type_act.length ; i++)
 	}
 
 // génération du graphique de totaux
-/*	
+	
 am4core.ready(function() {
 
 // Themes begin
@@ -592,7 +591,7 @@ chart.data = donnees_total ;
 
 var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.renderer.grid.template.location = 0;
-categoryAxis.dataFields.category = "country";
+categoryAxis.dataFields.category = "activite";
 categoryAxis.renderer.minGridDistance = 40;
 categoryAxis.fontSize = 11;
 
@@ -610,7 +609,7 @@ series.columns.template.adapter.add("fill", function(fill, target) {
 });
 
 });
-*/
+
 
 type_act.forEach(function(element,index)
 {
