--- a/index.html
+++ b/index.html
@@ -578,35 +578,44 @@ for (let i=0 ; i < type_act.length ; i++)
 	}
 
 // génération du graphique de totaux
-/*	
+	
 am4core.ready(function() {
 
 // Themes begin
 am4core.useTheme(am4themes_animated);
 // Themes end
 var chart = container_6.createChild(am4charts.XYChart);
-chart.hiddenState.properties.opacity = 0; // this creates initial fade-in
-
-chart.data = donnees_total ;
-
+chart.data = donnees_total
 var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
-categoryAxis.renderer.grid.template.location = 0;
 categoryAxis.dataFields.category = "activite";
-categoryAxis.renderer.minGridDistance = 40;
-categoryAxis.fontSize = 11;
+categoryAxis.renderer.grid.template.location = 0;
+categoryAxis.renderer.minGridDistance = 30;
 
+categoryAxis.renderer.labels.template.adapter.add("dy", function(dy, target) {
+  if (target.dataItem && target.dataItem.index & 2 == 2) {
+    return dy + 25;
+  }
+  return dy;
+});
 
+var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
+
+// Create series
 var series = chart.series.push(new am4charts.ColumnSeries());
-series.dataFields.categoryX = "activite";
-series.dataFields.valueY = "value";
-series.columns.template.tooltipText = "{valueY.value}";
-series.columns.template.tooltipY = 0;
-series.columns.template.strokeOpacity = 0;
+series.dataFields.valueY = "activite";
+series.dataFields.categoryX = "value";
+series.name = "Nb familles";
+series.columns.template.tooltipText = "{categoryX}: [bold]{valueY}[/]";
+series.columns.template.fillOpacity = .8;
+
+var columnTemplate = series.columns.template;
+columnTemplate.strokeWidth = 2;
+columnTemplate.strokeOpacity = 1;
 
 
 });
 
-*/
+
 
 
 type_act.forEach(function(element,index)
