--- a/index.html
+++ b/index.html
@@ -590,10 +590,11 @@ var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.dataFields.category = "activite";
 categoryAxis.renderer.grid.template.location = 0;
 categoryAxis.renderer.minGridDistance = 30;
+categoryAxis.renderer.labels.template.fontSize = 10;
 
 categoryAxis.renderer.labels.template.adapter.add("dy", function(dy, target) {
   if (target.dataItem && target.dataItem.index & 2 == 2) {
-    return dy + 25;
+    return dy;
   }
   return dy;
 });
