--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@ var categoryAxis = chart.xAxes.push(new am4charts.CategoryAxis());
 categoryAxis.dataFields.category = "activite";
 categoryAxis.renderer.grid.template.location = 0;
 categoryAxis.renderer.minGridDistance = 30;
-categoryAxis.renderer.labels.template.fontSize = 8;
+categoryAxis.renderer.labels.template.fontSize = 10;
 categoryAxis.renderer.labels.template.fontWeight = 600;
 
 categoryAxis.renderer.labels.template.adapter.add("dy", function(dy, target) {
@@ -608,6 +608,8 @@ categoryAxis.renderer.labels.template.adapter.add("dy", function(dy, target) {
 });
 
 var valueAxis = chart.yAxes.push(new am4charts.ValueAxis());
+valueAxis.renderer.labels.template.fontSize = 10;
+valueAxis.renderer.labels.template.fontWeight = 600;
 
 // Create series
 var series = chart.series.push(new am4charts.ColumnSeries());
